Fix autosuggest colors
Forgot to test this.
Changes the background to a dark one and hover background to match.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/oatstodon/diff.scss
+++ b/app/javascript/flavours/glitch/styles/oatstodon/diff.scss
@@ -219,6 +219,21 @@ hr {
   }
 }
 
+.autosuggest-textarea {
+  &__suggestions {
+    background-color: $simple-background-color;
+
+    &__item {
+      &:hover,
+      &:focus,
+      &:active,
+      &.selected {
+        background-color: lighten($simple-background-color, 8%);
+      }
+    }
+  }
+}
+
 .reply-indicator {
   max-height: 38px;
   overflow-y: hidden;
