Fix fallback to glitch when vanilla flavour removed
Checking whether vanilla flavour is present or not is required here, as otherwise falling back to the instance default doesn't work and people having the vanilla flavour selected are met with a crash.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/shared/_web_app.html.haml
+++ b/app/views/shared/_web_app.html.haml
@@ -1,6 +1,6 @@
 - content_for :header_tags do
   - if user_signed_in?
-    - if current_user.setting_flavour == 'vanilla'
+    - if current_user.setting_flavour == 'vanilla' && Themes.instance.flavours.include?('vanilla')
       = preload_pack_asset 'features/compose.js'
       = preload_pack_asset 'features/home_timeline.js'
       = preload_pack_asset 'features/notifications.js'
