Fix size of react button
`emoji-button` class no longer exists and the button was a bit oversized.

Sets `width` and `height` for the `emoji-picker-dropdown` class in action bar.

Removes padding override for `detailed-status__button`

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -574,8 +574,9 @@
   }
 
   // Polyam: Reaction button
-  & > .emoji-picker-dropdown > .emoji-button {
-    padding: 0;
+  & > .emoji-picker-dropdown {
+    width: 22px;
+    height: 22px;
   }
 }
 
