--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -435,6 +435,7 @@ a .account__avatar {
   overflow: hidden;
   word-break: normal;
   word-wrap: break-word;
+  margin-top: 16px; // Polyam: Note is shown after fields
 
   p {
     margin-bottom: 20px;
@@ -614,7 +615,8 @@ a .account__avatar {
 
     .account__header__fields {
       margin: 0;
-      margin-top: 16px;
+
+      // Polyam: margin-top: 16px; removed as margin to note was too large
       border-radius: 4px;
       background: darken($ui-base-color, 4%);
       border: 0;
