--- a/app/javascript/flavours/polyam/styles/mastodon-light.scss
+++ b/app/javascript/flavours/polyam/styles/mastodon-light.scss
@@ -1,4 +1,4 @@
 @import 'mastodon-light/variables';
-@import 'index';
+@import 'application';
 @import 'mastodon-light/diff';
 @import 'node_modules/highlight.js/scss/github';
