--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,12 +22,13 @@
 
     %link{ rel: 'mask-icon', href: frontend_asset_path('images/logo-symbol-icon.svg'), color: '#6364FF' }/
     %link{ rel: 'manifest', href: manifest_path(format: :json) }/
+    = theme_color_tags current_skin
     %meta{ name: 'apple-mobile-web-app-capable', content: 'yes' }/
 
     %title= html_title
 
     = flavoured_stylesheet_pack_tag 'common', media: 'all', crossorigin: 'anonymous' # upstream uses `common` but that's implicitly defined
-    = stylesheet_pack_tag current_theme, media: 'all', crossorigin: 'anonymous'
+    = theme_style_tags current_skin
 
     -# Needed for the wicg-inert polyfill. It needs to be on it's own <style> tag, with this `id`
     = flavoured_stylesheet_pack_tag 'inert', media: 'all', id: 'inert-style'
