--- a/app/views/admin/settings/appearance/show.html.haml
+++ b/app/views/admin/settings/appearance/show.html.haml
@@ -22,6 +22,23 @@
               value_method: ->(value) { value.join('/') },
               group_method: :last
 
+  .fields-row
+    .fields-row__column.fields-row__column-6.fields-group
+      = f.input :system_dark,
+                collection: Themes.instance.skins_for(Setting.flavour).delete_if { |s| s == 'system' },
+                wrapper: :with_label,
+                label: t('admin.settings.system_dark.title'),
+                include_blank: false,
+                label_method: ->(system_dark) { I18n.t("skins.#{Setting.flavour}.#{system_dark}", default: system_dark) }
+
+    .fields-row__column.fields-row__column-6.fields-group
+      = f.input :system_light,
+                collection: Themes.instance.skins_for(Setting.flavour).delete_if { |s| s == 'system' },
+                wrapper: :with_label,
+                label: t('admin.settings.system_light.title'),
+                include_blank: false,
+                label_method: ->(system_light) { I18n.t("skins.#{Setting.flavour}.#{system_light}", default: system_light) }
+
   .fields-group
     = f.input :custom_css,
               as: :text,
