--- a/app/views/admin/settings/appearance/show.html.haml
+++ b/app/views/admin/settings/appearance/show.html.haml
@@ -25,19 +25,27 @@
   .fields-row
     .fields-row__column.fields-row__column-6.fields-group
       = f.input :system_dark,
-                collection: Themes.instance.skins_for(Setting.flavour).delete_if { |s| s == 'system' },
+                collection: Themes.instance.flavours_and_skins.each { |(_, fsa)| fsa.delete_if { |fs| fs[1] == 'system' } },
+                group_label_method: ->(flavour_and_skin) { I18n.t("flavours.#{flavour_and_skin[0]}.name", default: flavour_and_skin) },
                 wrapper: :with_label,
                 label: t('admin.settings.system_dark.title'),
                 include_blank: false,
-                label_method: ->(system_dark) { I18n.t("skins.#{Setting.flavour}.#{system_dark}", default: system_dark) }
+                as: :grouped_select,
+                value_method: ->(value) { value[1] },
+                label_method: ->(flavour_and_skin) { I18n.t("skins.#{flavour_and_skin.join('.')}", default: flavour_and_skin[1]) },
+                group_method: :last
 
     .fields-row__column.fields-row__column-6.fields-group
       = f.input :system_light,
-                collection: Themes.instance.skins_for(Setting.flavour).delete_if { |s| s == 'system' },
+                collection: Themes.instance.flavours_and_skins.each { |(_, fsa)| fsa.delete_if { |fs| fs[1] == 'system' } },
+                group_label_method: ->(flavour_and_skin) { I18n.t("flavours.#{flavour_and_skin[0]}.name", default: flavour_and_skin) },
                 wrapper: :with_label,
                 label: t('admin.settings.system_light.title'),
                 include_blank: false,
-                label_method: ->(system_light) { I18n.t("skins.#{Setting.flavour}.#{system_light}", default: system_light) }
+                as: :grouped_select,
+                value_method: ->(value) { value[1] },
+                label_method: ->(flavour_and_skin) { I18n.t("skins.#{flavour_and_skin.join('.')}", default: flavour_and_skin[1]) },
+                group_method: :last
 
   .fields-group
     = f.input :custom_css,
