--- a/app/views/admin/settings/appearance/show.html.haml
+++ b/app/views/admin/settings/appearance/show.html.haml
@@ -27,8 +27,9 @@
       = f.input :system_dark,
                 collection: Themes.instance.flavours_and_skins.each { |(_, fsa)| fsa.delete_if { |fs| fs[1] == 'system' } },
                 group_label_method: ->(flavour_and_skin) { I18n.t("flavours.#{flavour_and_skin[0]}.name", default: flavour_and_skin) },
-                wrapper: :with_label,
+                wrapper: :with_block_label,
                 label: t('admin.settings.system_dark.title'),
+                hint: t('admin.settings.system_dark.desc_html'),
                 include_blank: false,
                 as: :grouped_select,
                 value_method: ->(value) { value[1] },
@@ -39,8 +40,9 @@
       = f.input :system_light,
                 collection: Themes.instance.flavours_and_skins.each { |(_, fsa)| fsa.delete_if { |fs| fs[1] == 'system' } },
                 group_label_method: ->(flavour_and_skin) { I18n.t("flavours.#{flavour_and_skin[0]}.name", default: flavour_and_skin) },
-                wrapper: :with_label,
+                wrapper: :with_block_label,
                 label: t('admin.settings.system_light.title'),
+                hint: t('admin.settings.system_light.desc_html'),
                 include_blank: false,
                 as: :grouped_select,
                 value_method: ->(value) { value[1] },
