Add user setting to customize light/dark skins in system skin
Allows users to override the admin setting.

Adds new settings to flavour settings.

Settings default to admin setting or default skins if not available in selected flavour.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/settings/flavours/show.html.haml
+++ b/app/views/settings/flavours/show.html.haml
@@ -16,5 +16,25 @@
     .fields-group
       = f.input :setting_skin, collection: Themes.instance.skins_for(@selected), label_method: ->(skin) { I18n.t("skins.#{@selected}.#{skin}", default: skin) }, wrapper: :with_label, include_blank: false
 
+    - if Themes.instance.skins_for(@selected).include?('system')
+      .fields-row
+        .fields-row__column.fields-row__column-6.fields-group
+          = f.input :setting_system_dark,
+                    selected: Themes.instance.skins_for(@selected).include?(f.object.setting_system_dark) ? f.object.setting_system_dark : 'default',
+                    collection: Themes.instance.skins_for(@selected).delete_if { |s| s == 'system' },
+                    label_method: ->(skin) { I18n.t("skins.#{@selected}.#{skin}", default: skin) },
+                    wrapper: :with_label,
+                    include_blank: false,
+                    polyam_only: true
+
+        .fields-row__column.fields-row__column-6.fields-group
+          = f.input :setting_system_light,
+                    selected: Themes.instance.skins_for(@selected).include?(f.object.setting_system_light) ? f.object.setting_system_light : 'mastodon-light',
+                    collection: Themes.instance.skins_for(@selected).delete_if { |s| s == 'system' },
+                    label_method: ->(skin) { I18n.t("skins.#{@selected}.#{skin}", default: skin) },
+                    wrapper: :with_label,
+                    include_blank: false,
+                    polyam_only: true
+
   .actions
     = f.button :button, t('generic.use_this'), type: :submit
